--- a/demos/counterfactual_sim.ipynb
+++ b/demos/counterfactual_sim.ipynb
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cf = inf.CounterfactualSim(sim_pars, pathogens = [pathogen], intervention_packages=packages)"
+    "cf = inf.CounterfactualMultiSim(sim_pars, pathogens = [pathogen], intervention_packages=packages, n_sims=2)"
    ]
   },
   {
@@ -144,16 +144,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sim(<no label>; 2020-03-01 to 2020-06-09; pop: 5000 behaviour_module; epi: 9284⚙, 41☠)\n",
-      "Detection range: [{'lower': 8.0, 'upper': 23}]\n",
+      "Sim(<no label>; 2020-03-01 to 2020-06-09; pop: 5000 behaviour_module; epi: 9424⚙, 38☠)\n",
+      "Detection range: [{'lower': 5.0, 'upper': 25}]\n",
       "Is epidemic: [True]\n"
      ]
     }
    ],
    "source": [
-    "print(cf.sim_baseline)\n",
-    "print(f\"Detection range: {cf.sim_baseline.get_detection_ranges()}\")\n",
-    "print(f\"Is epidemic: {cf.sim_baseline.is_epidemic()}\")"
+    "i = 1\n",
+    "print(cf.sims[i].sim_baseline)\n",
+    "print(f\"Detection range: {cf.sims[i].sim_baseline.get_detection_ranges()}\")\n",
+    "print(f\"Is epidemic: {cf.sims[i].sim_baseline.is_epidemic()}\")"
    ]
   },
   {
@@ -173,8 +174,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running counterfactual for intervention package \"medium\" with detection time 2.\n",
-      "Running counterfactual for intervention package \"medium\" with detection time 5.\n"
+      "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 2.\n",
+      "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 5.\n",
+      "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 2.\n",
+      "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 5.\n"
      ]
     }
    ],
@@ -214,7 +217,8 @@
     }
    ],
    "source": [
-    "cf.sims_counterfactual"
+    "i = 0\n",
+    "cf.sims[i].sims_counterfactual"
    ]
   },
   {
@@ -241,7 +245,8 @@
     }
    ],
    "source": [
-    "cf.sims_counterfactual[\"medium\"][2]"
+    "i = 0\n",
+    "cf.sims[i].sims_counterfactual[\"medium\"][2]"
    ]
   },
   {
@@ -253,16 +258,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running counterfactual for intervention package \"medium\" with detection time 8.\n",
-      "Running counterfactual for intervention package \"medium\" with detection time 16.\n",
-      "Running counterfactual for intervention package \"medium\" with detection time 23.\n"
+      "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 8.\n",
+      "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 16.\n",
+      "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 23.\n",
+      "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 5.\n",
+      "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 15.\n",
+      "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 25.\n"
      ]
     }
    ],
@@ -299,7 +307,8 @@
     }
    ],
    "source": [
-    "cf.sims_counterfactual"
+    "i = 0\n",
+    "cf.sims[i].sims_counterfactual"
    ]
   },
   {
@@ -363,7 +372,8 @@
     }
    ],
    "source": [
-    "cf.sims_counterfactual"
+    "i = 0\n",
+    "cf.sims[i].sims_counterfactual"
    ]
   }
  ],
