--- a/demos/counterfactual_sim.ipynb
+++ b/demos/counterfactual_sim.ipynb
@@ -112,11 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cf = inf.CounterfactualMultiSim(sim_pars, pathogens = [pathogen], intervention_packages=packages, n_sims=2)"
+    "cf = inf.CounterfactualMultiSim(sim_pars, pathogens = [pathogen], intervention_packages=packages, n_sims=5, maxcpu=0.9, maxmem = 0.9)"
    ]
   },
   {
@@ -128,30 +128,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cf.run_baseline()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sim(<no label>; 2020-03-01 to 2020-06-09; pop: 5000 behaviour_module; epi: 9424⚙, 38☠)\n",
-      "Detection range: [{'lower': 5.0, 'upper': 25}]\n",
+      "CPU ✓ (0.39<0.90), memory ✓ (0.62<0.90): starting process 0 after 1 tries\n",
+      "Running baseline (seed 42) simulation.\n",
+      "CPU ✓ (0.00<0.90), memory ✓ (0.62<0.90): starting process 1 after 1 tries\n",
+      "Running baseline (seed 43) simulation.\n",
+      "CPU ✓ (0.35<0.90), memory ✓ (0.62<0.90): starting process 2 after 1 tries\n",
+      "Running baseline (seed 44) simulation.\n",
+      "CPU ✓ (0.47<0.90), memory ✓ (0.62<0.90): starting process 3 after 1 tries\n",
+      "Running baseline (seed 45) simulation.\n",
+      "CPU ✓ (0.62<0.90), memory ✓ (0.62<0.90): starting process 4 after 1 tries\n",
+      "Running baseline (seed 46) simulation.\n"
+     ]
+    }
+   ],
+   "source": [
+    "cf.run_baseline(verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sim(<no label>; 2020-03-01 to 2020-06-09; pop: 5000 behaviour_module; epi: 9322⚙, 36☠)\n",
+      "Detection range: [{'lower': 4.0, 'upper': 27}]\n",
       "Is epidemic: [True]\n"
      ]
     }
    ],
    "source": [
-    "i = 1\n",
+    "i = 2\n",
     "print(cf.sims[i].sim_baseline)\n",
     "print(f\"Detection range: {cf.sims[i].sim_baseline.get_detection_ranges()}\")\n",
     "print(f\"Is epidemic: {cf.sims[i].sim_baseline.is_epidemic()}\")"
@@ -167,17 +184,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "CPU ✓ (0.32<0.90), memory ✓ (0.63<0.90): starting process 0 after 1 tries\n",
       "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 2.\n",
-      "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 5.\n",
+      "CPU ✓ (0.43<0.90), memory ✓ (0.62<0.90): starting process 1 after 1 tries\n",
       "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 2.\n",
-      "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 5.\n"
+      "CPU ✓ (0.62<0.90), memory ✓ (0.63<0.90): starting process 2 after 1 tries\n",
+      "Running counterfactual (seed 44) for intervention package \"medium\" with detection time 2.\n",
+      "CPU ✓ (0.80<0.90), memory ✓ (0.63<0.90): starting process 3 after 1 tries\n",
+      "Running counterfactual (seed 45) for intervention package \"medium\" with detection time 2.\n",
+      "CPU load too high (0.90>0.90); process 4 queued 1 times\n",
+      "CPU ✓ (0.00<0.90), memory ✓ (0.64<0.90): starting process 4 after 2 tries\n",
+      "Running counterfactual (seed 46) for intervention package \"medium\" with detection time 2.\n",
+      "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 5.\n",
+      "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 5.\n",
+      "Running counterfactual (seed 44) for intervention package \"medium\" with detection time 5.\n",
+      "Running counterfactual (seed 45) for intervention package \"medium\" with detection time 5.\n",
+      "Running counterfactual (seed 46) for intervention package \"medium\" with detection time 5.\n"
      ]
     }
    ],
@@ -194,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -202,8 +231,8 @@
      "output_type": "stream",
      "text": [
       "#0: 'medium': {2: Sim(<no label>; 2020-03-01 to 2020-06-09; pop: 5000\n",
-      "behaviour_module; epi: 8702⚙, 28☠), 5: Sim(<no label>; 2020-03-01 to 2020-06-09;\n",
-      "pop: 5000 behaviour_module; epi: 8702⚙, 28☠)}\n",
+      "behaviour_module; epi: 8446⚙, 31☠), 5: Sim(<no label>; 2020-03-01 to 2020-06-09;\n",
+      "pop: 5000 behaviour_module; epi: 8446⚙, 31☠)}\n",
       "#1: 'strong': {}\n"
      ]
     },
@@ -211,13 +240,13 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "i = 0\n",
+    "i = 2\n",
     "cf.sims[i].sims_counterfactual"
    ]
   },
@@ -230,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +268,7 @@
        "Sim(<no label>; 2020-03-01 to 2020-06-09; pop: 5000 behaviour_module; epi: 8702⚙, 28☠)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,19 +287,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "CPU ✓ (0.47<0.90), memory ✓ (0.71<0.90): starting process 0 after 1 tries\n",
       "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 8.\n",
-      "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 16.\n",
-      "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 23.\n",
+      "CPU ✓ (0.54<0.90), memory ✓ (0.71<0.90): starting process 1 after 1 tries\n",
       "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 5.\n",
-      "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 15.\n",
-      "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 25.\n"
+      "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 16.\n",
+      "CPU ✓ (0.47<0.90), memory ✓ (0.70<0.90): starting process 2 after 1 tries\n",
+      "\n",
+      "Running counterfactual (seed 44) for intervention package \"medium\" with detection time 4.Running counterfactual (seed 43) for intervention package \"medium\" with detection time 15.\n",
+      "CPU ✓ (0.81<0.90), memory ✓ (0.70<0.90): starting process 3 after 1 tries\n",
+      "Running counterfactual (seed 45) for intervention package \"medium\" with detection time 4.\n",
+      "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 23.\n",
+      "Running counterfactual (seed 44) for intervention package \"medium\" with detection time 16.\n",
+      "CPU ✓ (0.85<0.90), memory ✓ (0.71<0.90): starting process 4 after 1 tries\n",
+      "Running counterfactual (seed 46) for intervention package \"medium\" with detection time 9.\n",
+      "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 25.\n",
+      "Running counterfactual (seed 45) for intervention package \"medium\" with detection time 14.\n",
+      "Running counterfactual (seed 44) for intervention package \"medium\" with detection time 27.\n",
+      "Running counterfactual (seed 46) for intervention package \"medium\" with detection time 16.\n",
+      "Running counterfactual (seed 45) for intervention package \"medium\" with detection time 25.\n",
+      "Running counterfactual (seed 46) for intervention package \"medium\" with detection time 24.\n"
      ]
     }
    ],
@@ -280,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +344,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,19 +363,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running counterfactual for intervention package \"medium\" with detection time 8.\n",
-      "Running counterfactual for intervention package \"medium\" with detection time 16.\n",
-      "Running counterfactual for intervention package \"medium\" with detection time 23.\n",
-      "Running counterfactual for intervention package \"strong\" with detection time 8.\n",
-      "Running counterfactual for intervention package \"strong\" with detection time 16.\n",
-      "Running counterfactual for intervention package \"strong\" with detection time 23.\n"
+      "CPU ✓ (0.17<0.90), memory ✓ (0.70<0.90): starting process 0 after 1 tries\n",
+      "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 8.\n",
+      "CPU ✓ (0.44<0.90), memory ✓ (0.70<0.90): starting process 1 after 1 tries\n",
+      "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 5.\n",
+      "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 16.\n",
+      "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 15.\n",
+      "CPU ✓ (0.48<0.90), memory ✓ (0.69<0.90): starting process 2 after 1 tries\n",
+      "Running counterfactual (seed 44) for intervention package \"medium\" with detection time 4.\n",
+      "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 23.\n",
+      "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 25.\n",
+      "Running counterfactual (seed 44) for intervention package \"medium\" with detection time 16.\n",
+      "CPU ✓ (0.61<0.90), memory ✓ (0.59<0.90): starting process 3 after 1 tries\n",
+      "Running counterfactual (seed 45) for intervention package \"medium\" with detection time 4.\n",
+      "Running counterfactual (seed 42) for intervention package \"strong\" with detection time 8.\n",
+      "Running counterfactual (seed 45) for intervention package \"medium\" with detection time 14.\n",
+      "Running counterfactual (seed 44) for intervention package \"medium\" with detection time 27.\n",
+      "Running counterfactual (seed 43) for intervention package \"strong\" with detection time 5.\n",
+      "CPU ✓ (0.75<0.90), memory ✓ (0.62<0.90): starting process 4 after 1 tries\n",
+      "Running counterfactual (seed 46) for intervention package \"medium\" with detection time 9.\n",
+      "Running counterfactual (seed 42) for intervention package \"strong\" with detection time 16.\n",
+      "Running counterfactual (seed 45) for intervention package \"medium\" with detection time 25.\n",
+      "Running counterfactual (seed 46) for intervention package \"medium\" with detection time 16.\n",
+      "Running counterfactual (seed 44) for intervention package \"strong\" with detection time 4.\n",
+      "Running counterfactual (seed 43) for intervention package \"strong\" with detection time 15.\n",
+      "Running counterfactual (seed 42) for intervention package \"strong\" with detection time 23.\n",
+      "Running counterfactual (seed 46) for intervention package \"medium\" with detection time 24.\n",
+      "Running counterfactual (seed 45) for intervention package \"strong\" with detection time 4.\n",
+      "Running counterfactual (seed 44) for intervention package \"strong\" with detection time 16.\n",
+      "Running counterfactual (seed 43) for intervention package \"strong\" with detection time 25.\n",
+      "Running counterfactual (seed 46) for intervention package \"strong\" with detection time 9.\n",
+      "Running counterfactual (seed 45) for intervention package \"strong\" with detection time 14.\n",
+      "Running counterfactual (seed 44) for intervention package \"strong\" with detection time 27.\n",
+      "Running counterfactual (seed 46) for intervention package \"strong\" with detection time 16.\n",
+      "Running counterfactual (seed 45) for intervention package \"strong\" with detection time 25.\n",
+      "Running counterfactual (seed 46) for intervention package \"strong\" with detection time 24.\n"
      ]
     }
    ],
@@ -342,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +438,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,6 +447,13 @@
     "i = 0\n",
     "cf.sims[i].sims_counterfactual"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
