Make parallelization optional

--- a/demos/counterfactual_sim.ipynb
+++ b/demos/counterfactual_sim.ipynb
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cf = inf.CounterfactualMultiSim(sim_pars, pathogens = [pathogen], intervention_packages=packages, n_sims=5, maxcpu=0.9, maxmem = 0.9)"
+    "cf = inf.CounterfactualMultiSim(sim_pars, pathogens = [pathogen], intervention_packages=packages, n_sims=5, maxcpu=0.9, maxmem = 0.9, parallelize = True)"
    ]
   },
   {
@@ -135,15 +135,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU ✓ (0.48<0.90), memory ✓ (0.66<0.90): starting process 0 after 1 tries\n",
+      "CPU ✓ (0.35<0.90), memory ✓ (0.54<0.90): starting process 0 after 1 tries\n",
       "Running baseline (seed 42) simulation.\n",
-      "CPU ✓ (0.00<0.90), memory ✓ (0.67<0.90): starting process 1 after 1 tries\n",
+      "CPU ✓ (0.28<0.90), memory ✓ (0.55<0.90): starting process 1 after 1 tries\n",
       "Running baseline (seed 43) simulation.\n",
-      "CPU ✓ (0.37<0.90), memory ✓ (0.67<0.90): starting process 2 after 1 tries\n",
+      "CPU ✓ (0.37<0.90), memory ✓ (0.55<0.90): starting process 2 after 1 tries\n",
       "Running baseline (seed 44) simulation.\n",
-      "CPU ✓ (0.00<0.90), memory ✓ (0.67<0.90): starting process 3 after 1 tries\n",
+      "CPU ✓ (0.44<0.90), memory ✓ (0.55<0.90): starting process 3 after 1 tries\n",
       "Running baseline (seed 45) simulation.\n",
-      "CPU ✓ (0.83<0.90), memory ✓ (0.67<0.90): starting process 4 after 1 tries\n",
+      "CPU ✓ (0.54<0.90), memory ✓ (0.55<0.90): starting process 4 after 1 tries\n",
       "Running baseline (seed 46) simulation.\n"
      ]
     }
@@ -293,29 +293,31 @@
    "metadata": {},
    "source": [
     "##### Run counterfactual simulations\n",
-    "To run a counterfactual simulation, you have to specify which intervention package should be used and what detection time to assume."
+    "To run a counterfactual simulation, you have to specify which intervention package should be used and what detection time to assume.\n",
+    "\n",
+    "The simulations are parallelized across seeds."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU ✓ (0.19<0.90), memory ✓ (0.66<0.90): starting process 0 after 1 tries\n",
+      "CPU ✓ (0.30<0.90), memory ✓ (0.65<0.90): starting process 0 after 1 tries\n",
       "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 2.\n",
-      "CPU ✓ (0.34<0.90), memory ✓ (0.67<0.90): starting process 1 after 1 tries\n",
+      "CPU ✓ (0.31<0.90), memory ✓ (0.65<0.90): starting process 1 after 1 tries\n",
       "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 2.\n",
-      "CPU ✓ (0.47<0.90), memory ✓ (0.67<0.90): starting process 2 after 1 tries\n",
+      "CPU ✓ (0.43<0.90), memory ✓ (0.65<0.90): starting process 2 after 1 tries\n",
       "Running counterfactual (seed 44) for intervention package \"medium\" with detection time 2.\n",
-      "CPU ✓ (0.70<0.90), memory ✓ (0.67<0.90): starting process 3 after 1 tries\n",
+      "CPU ✓ (0.62<0.90), memory ✓ (0.65<0.90): starting process 3 after 1 tries\n",
       "Running counterfactual (seed 45) for intervention package \"medium\" with detection time 2.\n",
-      "CPU ✓ (0.64<0.90), memory ✓ (0.67<0.90): starting process 4 after 1 tries\n",
-      "Running counterfactual (seed 46) for intervention package \"medium\" with detection time 2.\n",
       "Running counterfactual (seed 42) for intervention package \"medium\" with detection time 4.\n",
+      "CPU ✓ (0.59<0.90), memory ✓ (0.65<0.90): starting process 4 after 1 tries\n",
+      "Running counterfactual (seed 46) for intervention package \"medium\" with detection time 2.\n",
       "Running counterfactual (seed 43) for intervention package \"medium\" with detection time 4.\n",
       "Running counterfactual (seed 44) for intervention package \"medium\" with detection time 4.\n",
       "Running counterfactual (seed 45) for intervention package \"medium\" with detection time 4.\n",
@@ -331,12 +333,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that for debugging / testing purposes, you can also run simulations in non-parallel mode:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cf.run_counterfactual(intervention_package_key=\"medium\", detection_times=[2, 4], verbose = True, parallelize=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "You can inspect the stored counterfactual simulations in `cf.sims_counterfactual`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +371,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
