--- a/demos/counterfactual_sim.ipynb
+++ b/demos/counterfactual_sim.ipynb
@@ -45,25 +45,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "le = inf.LifeExpectancy(list(range(87, 0, -1)), list(range(89, 0, -1)))"
+    "le_UK = inf.LifeExpectancy(\n",
+    "    life_remaining_males=[\n",
+    "        78.57, 77.91, 76.93, 75.94, 74.95, 73.96, 72.96, 71.97, 70.97, 69.98,\n",
+    "        68.98, 67.99, 66.99, 66.00, 65.01, 64.01, 63.02, 62.04, 61.06, 60.08,\n",
+    "        59.11, 58.14, 57.17, 56.20, 55.23, 54.26, 53.29, 52.33, 51.36, 50.39,\n",
+    "        49.43, 48.47, 47.51, 46.55, 45.60, 44.65, 43.69, 42.75, 41.81, 40.86,\n",
+    "        39.93, 39.00, 38.07, 37.14, 36.22, 35.30, 34.39, 33.48, 32.58, 31.69,\n",
+    "        30.80, 29.92, 29.04, 28.17, 27.30, 26.43, 25.58, 24.73, 23.89, 23.05,\n",
+    "        22.23, 21.41, 20.61, 19.81, 19.03, 18.25, 17.48, 16.73, 15.99, 15.26,\n",
+    "        14.54, 13.84, 13.14, 12.46, 11.78, 11.12, 10.47, 9.86, 9.26, 8.68,\n",
+    "        8.12, 7.60, 7.08, 6.60, 6.12, 5.68, 5.25, 4.85, 4.48, 4.14, 3.81,\n",
+    "        3.52, 3.25, 3.00, 2.78, 2.57, 2.40, 2.22, 2.07, 1.91, 1.8\n",
+    "],\n",
+    "    life_remaining_females=[\n",
+    "        82.57, 81.86, 80.88, 79.89, 78.90, 77.90, 76.91, 75.91, 74.92, 73.92,\n",
+    "        72.92, 71.93, 70.93, 69.94, 68.94, 67.95, 66.96, 65.97, 64.98, 63.99,\n",
+    "        63.00, 62.01, 61.03, 60.04, 59.06, 58.07, 57.08, 56.10, 55.12, 54.13,\n",
+    "        53.15, 52.17, 51.19, 50.21, 49.24, 48.27, 47.30, 46.33, 45.36, 44.40,\n",
+    "        43.44, 42.48, 41.53, 40.58, 39.63, 38.68, 37.74, 36.80, 35.87, 34.94,\n",
+    "        34.02, 33.10, 32.18, 31.27, 30.36, 29.46, 28.56, 27.66, 26.78, 25.89,\n",
+    "        25.02, 24.15, 23.29, 22.44, 21.60, 20.76, 19.93, 19.12, 18.31, 17.51,\n",
+    "        16.72, 15.94, 15.17, 14.41, 13.66, 12.92, 12.20, 11.51, 10.83, 10.16,\n",
+    "        9.53, 8.91, 8.32, 7.75, 7.20, 6.67, 6.17, 5.70, 5.26, 4.85, 4.47, 4.11,\n",
+    "        3.78, 3.49, 3.23, 2.97, 2.74, 2.54, 2.35, 2.20, 2.04\n",
+    "])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bd = inf.Burden(life_expectancy=le)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +89,7 @@
     "        n_days        = 100,            \n",
     "        verbose       = 0,             \n",
     "        rand_seed     = 42,\n",
-    "        burden       = bd                     \n",
+    "        burden       = inf.Burden(life_expectancy=le_UK)                    \n",
     "    )  "
    ]
   },
@@ -88,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,11 +146,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cf = inf.CounterfactualMultiSim(sim_pars, pathogens = [pathogen], intervention_packages=packages, n_sims=5, maxcpu=0.9, maxmem = 0.9, parallelize = True)"
+    "cf = inf.CounterfactualMultiSim(sim_pars, pathogens = [pathogen], intervention_packages=packages, n_sims=1, maxcpu=0.9, maxmem = 0.9, parallelize = True)"
    ]
   },
   {
@@ -147,82 +162,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU ✓ (0.35<0.90), memory ✓ (0.54<0.90): starting process 0 after 1 tries\n",
-      "Running baseline (seed 42) simulation.\n",
-      "CPU ✓ (0.28<0.90), memory ✓ (0.55<0.90): starting process 1 after 1 tries\n",
-      "Running baseline (seed 43) simulation.\n",
-      "CPU ✓ (0.37<0.90), memory ✓ (0.55<0.90): starting process 2 after 1 tries\n",
-      "Running baseline (seed 44) simulation.\n",
-      "CPU ✓ (0.44<0.90), memory ✓ (0.55<0.90): starting process 3 after 1 tries\n",
-      "Running baseline (seed 45) simulation.\n",
-      "CPU ✓ (0.54<0.90), memory ✓ (0.55<0.90): starting process 4 after 1 tries\n",
-      "Running baseline (seed 46) simulation.\n"
+      "CPU ✓ (0.35<0.90), memory ✓ (0.66<0.90): starting process 0 after 1 tries\n",
+      "Running baseline (seed 42) simulation.\n"
      ]
     }
    ],
    "source": [
-    "cf.run_baseline(verbose = True)"
+    "cf.run_baseline(verbose = True, parallelize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'new_yll': array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]),\n",
-       " 'cum_yll': array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])}"
+       "{'new_yll': array([ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,\n",
+       "         0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,\n",
+       "         0.  ,  0.  ,  0.  ,  0.  , 12.2 ,  0.  ,  0.  ,  0.  ,  0.  ,\n",
+       "         0.  ,  0.  ,  0.  ,  4.85,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,\n",
+       "        11.78, 15.4 , 23.37, 22.23, 11.69,  4.14, 41.16,  3.23, 34.69,\n",
+       "         6.6 , 12.46, 18.25,  5.26, 15.17,  0.  ,  4.85, 10.55,  4.47,\n",
+       "        13.66,  2.22,  0.  ,  0.  ,  0.  ,  0.  , 32.78,  0.  , 39.91,\n",
+       "         5.68,  8.12,  7.08, 10.16,  0.  ,  7.6 , 13.84,  0.  ,  0.  ,\n",
+       "         0.  , 17.51,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,\n",
+       "         0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  , 13.66,  0.  ,\n",
+       "         0.  ,  0.  ,  8.91,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,\n",
+       "         0.  ,  0.  ]),\n",
+       " 'proj_yll': array([  0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,  12.2 ,\n",
+       "         12.2 ,  12.2 ,  12.2 ,  21.73,  26.58,  26.58,  26.58,  33.18,\n",
+       "         33.18,  44.96, 114.46, 125.56, 157.09, 157.09, 199.67, 219.03,\n",
+       "        243.  , 275.48, 284.39, 284.39, 298.05, 298.05, 293.2 , 293.2 ,\n",
+       "        311.45, 311.45, 311.45, 315.92, 309.82, 294.42, 296.96, 274.73,\n",
+       "        270.12, 265.98, 246.42, 243.19, 218.66, 212.06, 208.51, 190.26,\n",
+       "        185.  , 187.34, 187.34, 182.49, 171.94, 167.47, 153.81, 151.59,\n",
+       "        151.59, 151.59, 151.59, 151.59, 118.81, 132.47,  92.56,  86.88,\n",
+       "         78.76,  71.68,  61.52,  61.52,  53.92,  40.08,  40.08,  40.08,\n",
+       "         40.08,  22.57,  22.57,  22.57,  22.57,  22.57,  22.57,  22.57,\n",
+       "         22.57,  22.57,  22.57,  22.57,  22.57,  22.57,  22.57,  22.57,\n",
+       "          8.91,   8.91,   8.91,   8.91,   0.  ,   0.  ,   0.  ,   0.  ,\n",
+       "         15.94,  38.99,  38.99,  38.99,  38.99]),\n",
+       " 'cum_yll': array([  0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,  12.2 ,\n",
+       "         12.2 ,  12.2 ,  12.2 ,  21.73,  26.58,  26.58,  26.58,  33.18,\n",
+       "         33.18,  44.96, 114.46, 125.56, 157.09, 157.09, 211.87, 231.23,\n",
+       "        255.2 , 287.68, 296.59, 296.59, 310.25, 310.25, 310.25, 310.25,\n",
+       "        328.5 , 328.5 , 328.5 , 332.97, 338.65, 338.65, 364.56, 364.56,\n",
+       "        371.64, 371.64, 393.24, 393.24, 403.4 , 403.4 , 412.31, 412.31,\n",
+       "        412.31, 429.82, 429.82, 429.82, 429.82, 429.82, 429.82, 429.82,\n",
+       "        429.82, 429.82, 429.82, 429.82, 429.82, 443.48, 443.48, 443.48,\n",
+       "        443.48, 443.48, 443.48, 443.48, 443.48, 443.48, 443.48, 443.48,\n",
+       "        443.48, 443.48, 443.48, 443.48, 443.48, 443.48, 443.48, 443.48,\n",
+       "        443.48, 443.48, 443.48, 443.48, 443.48, 443.48, 443.48, 443.48,\n",
+       "        443.48, 443.48, 443.48, 443.48, 443.48, 443.48, 443.48, 443.48,\n",
+       "        459.42, 482.47, 482.47, 482.47, 482.47])}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cf.sims[0].sim_baseline[\"burden\"].get_results()\n",
-    "\n",
-    "\n",
-    "#cf.sims[0].sim_baseline.people[\"sex\"].nonzero()[0]"
+    "cf.sims[0].sim_baseline[\"burden\"].results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "101"
+       "482.47"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(cf.sims[0].sim_baseline.results[\"cum_infections\"])"
+    "cf.sims[0].sim_baseline.summary[\"cum_yll\"]"
    ]
   },
   {
