Stratify by pathogen

--- a/demos/counterfactual_sim.ipynb
+++ b/demos/counterfactual_sim.ipynb
@@ -40,12 +40,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Baseline simulation parameters"
+    "##### Inputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Life expectancy table for the UK population (taken from National life tables 2020 to 2022, Office for National Statistics). We use the expected residual life (remaining years) at a given age (from age 0 to 100). This allows us to measure the burden of disease in metrics such as Years of Life Lost (YLL)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,8 +84,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Baseline simulation parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +103,7 @@
     "        n_days        = 100,            \n",
     "        verbose       = 0,             \n",
     "        rand_seed     = 42,\n",
-    "        burden       = inf.Burden(life_expectancy=le_UK)                    \n",
+    "        burden       = inf.Burden(life_expectancy=le_UK) # this will compute burden/utility statistics and report them in results and summary                \n",
     "    )  "
    ]
   },
@@ -103,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU ✓ (0.35<0.90), memory ✓ (0.66<0.90): starting process 0 after 1 tries\n",
+      "CPU ✓ (0.22<0.90), memory ✓ (0.65<0.90): starting process 0 after 1 tries\n",
       "Running baseline (seed 42) simulation.\n"
      ]
     }
@@ -180,84 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'new_yll': array([ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,\n",
-       "         0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,\n",
-       "         0.  ,  0.  ,  0.  ,  0.  , 12.2 ,  0.  ,  0.  ,  0.  ,  0.  ,\n",
-       "         0.  ,  0.  ,  0.  ,  4.85,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,\n",
-       "        11.78, 15.4 , 23.37, 22.23, 11.69,  4.14, 41.16,  3.23, 34.69,\n",
-       "         6.6 , 12.46, 18.25,  5.26, 15.17,  0.  ,  4.85, 10.55,  4.47,\n",
-       "        13.66,  2.22,  0.  ,  0.  ,  0.  ,  0.  , 32.78,  0.  , 39.91,\n",
-       "         5.68,  8.12,  7.08, 10.16,  0.  ,  7.6 , 13.84,  0.  ,  0.  ,\n",
-       "         0.  , 17.51,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,\n",
-       "         0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  , 13.66,  0.  ,\n",
-       "         0.  ,  0.  ,  8.91,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,\n",
-       "         0.  ,  0.  ]),\n",
-       " 'proj_yll': array([  0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,  12.2 ,\n",
-       "         12.2 ,  12.2 ,  12.2 ,  21.73,  26.58,  26.58,  26.58,  33.18,\n",
-       "         33.18,  44.96, 114.46, 125.56, 157.09, 157.09, 199.67, 219.03,\n",
-       "        243.  , 275.48, 284.39, 284.39, 298.05, 298.05, 293.2 , 293.2 ,\n",
-       "        311.45, 311.45, 311.45, 315.92, 309.82, 294.42, 296.96, 274.73,\n",
-       "        270.12, 265.98, 246.42, 243.19, 218.66, 212.06, 208.51, 190.26,\n",
-       "        185.  , 187.34, 187.34, 182.49, 171.94, 167.47, 153.81, 151.59,\n",
-       "        151.59, 151.59, 151.59, 151.59, 118.81, 132.47,  92.56,  86.88,\n",
-       "         78.76,  71.68,  61.52,  61.52,  53.92,  40.08,  40.08,  40.08,\n",
-       "         40.08,  22.57,  22.57,  22.57,  22.57,  22.57,  22.57,  22.57,\n",
-       "         22.57,  22.57,  22.57,  22.57,  22.57,  22.57,  22.57,  22.57,\n",
-       "          8.91,   8.91,   8.91,   8.91,   0.  ,   0.  ,   0.  ,   0.  ,\n",
-       "         15.94,  38.99,  38.99,  38.99,  38.99]),\n",
-       " 'cum_yll': array([  0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,  12.2 ,\n",
-       "         12.2 ,  12.2 ,  12.2 ,  21.73,  26.58,  26.58,  26.58,  33.18,\n",
-       "         33.18,  44.96, 114.46, 125.56, 157.09, 157.09, 211.87, 231.23,\n",
-       "        255.2 , 287.68, 296.59, 296.59, 310.25, 310.25, 310.25, 310.25,\n",
-       "        328.5 , 328.5 , 328.5 , 332.97, 338.65, 338.65, 364.56, 364.56,\n",
-       "        371.64, 371.64, 393.24, 393.24, 403.4 , 403.4 , 412.31, 412.31,\n",
-       "        412.31, 429.82, 429.82, 429.82, 429.82, 429.82, 429.82, 429.82,\n",
-       "        429.82, 429.82, 429.82, 429.82, 429.82, 443.48, 443.48, 443.48,\n",
-       "        443.48, 443.48, 443.48, 443.48, 443.48, 443.48, 443.48, 443.48,\n",
-       "        443.48, 443.48, 443.48, 443.48, 443.48, 443.48, 443.48, 443.48,\n",
-       "        443.48, 443.48, 443.48, 443.48, 443.48, 443.48, 443.48, 443.48,\n",
-       "        443.48, 443.48, 443.48, 443.48, 443.48, 443.48, 443.48, 443.48,\n",
-       "        459.42, 482.47, 482.47, 482.47, 482.47])}"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cf.sims[0].sim_baseline[\"burden\"].results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "482.47"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cf.sims[0].sim_baseline.summary[\"cum_yll\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +258,6 @@
        "      <th>cum_deaths</th>\n",
        "      <th>cum_tests</th>\n",
        "      <th>...</th>\n",
-       "      <th>doubling_time</th>\n",
        "      <th>test_yield</th>\n",
        "      <th>rel_test_yield</th>\n",
        "      <th>frac_vaccinated</th>\n",
@@ -331,58 +267,59 @@
        "      <th>pop_symp_protection</th>\n",
        "      <th>new_diagnoses_custom</th>\n",
        "      <th>cum_diagnoses_custom</th>\n",
+       "      <th>cum_yll</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>9322.0</td>\n",
-       "      <td>4330.0</td>\n",
-       "      <td>9233.0</td>\n",
-       "      <td>5262.0</td>\n",
-       "      <td>351.0</td>\n",
-       "      <td>109.0</td>\n",
-       "      <td>8975.0</td>\n",
-       "      <td>36.0</td>\n",
+       "      <td>9284.0</td>\n",
+       "      <td>4289.0</td>\n",
+       "      <td>9169.0</td>\n",
+       "      <td>5309.0</td>\n",
+       "      <td>328.0</td>\n",
+       "      <td>107.0</td>\n",
+       "      <td>8903.0</td>\n",
+       "      <td>41.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>30.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4.514877</td>\n",
-       "      <td>0.825653</td>\n",
-       "      <td>0.32994</td>\n",
+       "      <td>4.397622</td>\n",
+       "      <td>0.819455</td>\n",
+       "      <td>0.329671</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>482.47</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 62 columns</p>\n",
+       "<p>1 rows × 63 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "   pathogen  cum_infections  cum_reinfections  cum_infectious  \\\n",
-       "0         0          9322.0            4330.0          9233.0   \n",
+       "0         0          9284.0            4289.0          9169.0   \n",
        "\n",
        "   cum_symptomatic  cum_severe  cum_critical  cum_recoveries  cum_deaths  \\\n",
-       "0           5262.0       351.0         109.0          8975.0        36.0   \n",
+       "0           5309.0       328.0         107.0          8903.0        41.0   \n",
        "\n",
-       "   cum_tests  ...  doubling_time  test_yield  rel_test_yield  frac_vaccinated  \\\n",
-       "0        0.0  ...           30.0         0.0             0.0              0.0   \n",
+       "   cum_tests  ...  test_yield  rel_test_yield  frac_vaccinated  pop_imm  \\\n",
+       "0        0.0  ...         0.0             0.0              0.0      0.0   \n",
        "\n",
-       "   pop_imm  pop_nabs  pop_protection  pop_symp_protection  \\\n",
-       "0      0.0  4.514877        0.825653              0.32994   \n",
+       "   pop_nabs  pop_protection  pop_symp_protection  new_diagnoses_custom  \\\n",
+       "0  4.397622        0.819455             0.329671                   0.0   \n",
        "\n",
-       "   new_diagnoses_custom  cum_diagnoses_custom  \n",
-       "0                   0.0                   0.0  \n",
+       "   cum_diagnoses_custom  cum_yll  \n",
+       "0                   0.0   482.47  \n",
        "\n",
-       "[1 rows x 62 columns]"
+       "[1 rows x 63 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
